style.css
/* ... */
#testimonials-list > a:hover,
#testimonials-list > a:focus {
  color: hsl(var(--clr-secondary-200));
}
.description {
  display: grid;
  place-items: center;
  text-align: center;
}
.about-me-section {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
}
.card {
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  max-width: 20rem;
}
.card-link {
  display: flex;
  align-items: center;
  border-bottom: 2px solid hsl(var(--clr-secondary-300));
  width: 7.5rem;
  padding-bottom: 5px;
  cursor: pointer;
}
.card-content {
  padding: 1.1rem;
}
.card-title {
  margin-bottom: 0.625rem;
}
.card-description {
  color: hsl(var(--clr-black));
  margin-bottom: 1.25rem;
}
.expertise-div > *,
.about-me-section > * {
  flex: 1;
}
.expertise-div {
  display: grid;
  place-items: center;
  text-align: center;
  gap: 2rem;
}
.expertise-div > * {
  background-color: hsl(var(--clr-primary));
  /* background-color: red */
}
.inner-expertise-div {
  display: grid;
  place-items: center;
  padding: 1rem;
  border-radius: 7px;
}
.github-link {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  border-radius: 7px;
  padding: 1rem;
}
.mobile-github {
  display: grid;
  place-content: center;
  margin: 2rem;
}
.desktop-github {
  display: none;
}
.github-link:hover,
.github-link:focus {
  background-color: hsl(var(--clr-secondary-200));
}
.portfolio-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.customer-testimonials {
  display: grid;
  gap: 1rem;
}
.customer--testimonials {
  border: 1px solid hsl(var(--clr-cyan));
  padding: 1.5rem;
  border-radius: 10px;
}
.customer--testimonials > p {
  text-align: center;
}
.stars,
.avatar {
  display: flex;
  justify-content: center;
}
.avatar {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
}
.avatar > img {
  width: 4rem;
}
.avatar span > p:first-of-type {
  font-weight: 700;
}
.form-section {
  padding: 1rem;
}
.form-field{
  display: block;
}
input[type="text"]{
  height: 2.8rem;
}

input[type="checkbox"] {
  appearance: none;
  width: 1rem;
  height: 1rem;
  background-color: white;
  border: 1px solid #000;
  border-radius: 5px;
  position: relative;
  cursor: pointer;
  vertical-align: bottom;
}
input[type="checkbox"]:checked {
  background: hsl(var(--clr-secondary-300));
}
input[type="checkbox"]:checked::after {
  content: "✔";
  color: white;
  font-size: 16px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.styled-input {
  margin: 0.5rem 0;
}
.custom-input {
  min-height: 8rem;
  max-width: 26rem;
  box-sizing: border-box;
}
.styled--input {
  min-height: 7rem;
}
.form-section {
  padding: 2rem;
  display: grid;
  place-content: center;
}
.form-field{
  display: flex;
  gap: 1.5rem;
}
.footer-div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
footer {
  display: grid;
  place-items: center;
  text-align: left;
}
.inner-footer-div-mobile {
  display: flex;
}
.logo-mobile {
  display: block;
}
.logo-desktop {
  display: none;
}
.footer-desktop {
  display: none;
}
.last-paragraph-mobile {
  display: block;
}
.social-links {
  transition: hover 500ms ease-in-out;
}
.social-links a:hover,
.social-links a:focus {
  background: hsl(var(--clr-secondary-200));
  border-radius: 50%;
  aspect-ratio: 1;
  width: 1.5rem;
}
@media screen and (min-width: 34em) {
  .hero-section {
    display: grid;
    place-items: center;
  }
  .logo-mobile {
    display: none;
  }
  .logo-desktop {
    display: block;
  }
  .mobile-github {
    display: none;
  }
  .portfolio-card {
    display: flex;
    flex-direction: row;
    gap: 2rem;
  }
  .mobile-github {
    display: none;
  }
  .desktop-github {
    display: block;
  }
  .customer--testimonials {
    border: 1px solid hsl(var(--clr-cyan));
    padding: 1.5rem;
    border-radius: 10px;
  }
  .customer--testimonials > p {
    text-align: left;
  }
  .stars,
  .avatar {
    display: flex;
    justify-content: flex-start;
  }
  .avatar {
    display: flex;
    gap: 1rem;
    align-items: flex-start;
  }
  .avatar > img {
    width: 3rem;
  }
  .form-section {
    padding: 0;
    display: grid;
    place-content: center;
  }
  input {
    width: 20rem;
  }
  .styled--input {
    width: 42rem;
    min-height: 10rem;
  }
  .card {
    max-width: 22rem;
  }
  .portfolio {
    background: none;
  }
  .portfolio:nth-child(1) {
    display: flex;
    justify-content: space-between;
  }
  .testimonials{
    padding-bottom: 4rem;
  }
  footer {
    margin-top: 4rem;
  }
  .footer-div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-top: 5rem;
  }
  .inner-footer-div-mobile {
    display: none;
  }
  .footer-desktop {
    display: flex;
  }
  .hr::before {
    content: "";
    border: 1px solid rgb(117, 115, 115);
    max-width: 70rem;
    display: flex;
    margin: 3rem 0 2rem 0;
  }
  .last-paragraph-mobile {
    display: none;
  }
}
/* ... */

